[package]
name = "fellow-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
bs58 = "0.5.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
solana-program = "1.16.17"
solana-sdk = "1.16.17"
spl-associated-token-account = "1.1.2"
spl-token = "3.5.0"
tokio = {version = "1.45.1", features = ["rt-multi-thread"]}
